[project]
name = "dans-toolbox"
version = "0.0.7"
description = "A bunch of Python tools."
readme = "README.md"
authors = [
    { name = "Dan Griffin", email = "dangffn@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "linkify-it-py==2.0.3",
    "markdown-it-py==4.0.0",
    "mdit-py-plugins==0.5.0",
    "mdurl==0.1.2",
    "numpy==2.3.3",
    "pillow==11.3.0",
    "platformdirs==4.5.0",
    "Pygments==2.19.2",
    "rich==14.2.0",
    "textual==6.2.1",
    "textual-imageview==0.1.1",
    "typing_extensions==4.15.0",
    "uc-micro-py==1.0.3",
    "moviepy==2.2.1"
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "pyrefly==0.41.0",
]

[project.scripts]
toolbox = "toolbox:main.main"

[tool.uv]
package = true

[tool.pyright]
strict = ["toolbox"]
typeCheckingMode = "strict"
exclude = ["**/__pycache__"]
include = ["toolbox"]
